lighthouse seo fix

--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Music Listening Analysis</title>
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Music Listening Analysis tool that displays listening habits, favourite artists, and music statistics for different users based on their listening history."
+    />
+    <meta name="author" content="Angel Scraper" />
+    <meta
+      name="keywords"
+      content="music analysis, listening data, music statistics, user listening history, music dashboard"
+    />
+
+    <title>Music Listening Analysis | User Listening Statistics</title>
+
     <link rel="stylesheet" href="style.css" />
     <script type="module" src="script.mjs"></script>
   </head>
+
   <body>
     <header>
       <h1>Music Listening Analysis</h1>
+
       <label for="user-select">Select user:</label>
       <select id="user-select">
         <option value="">Choose a user</option>
